cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(gz-sim-examples)

add_subdirectory(plugin/command_actor)
add_subdirectory(plugin/custom_component)
add_subdirectory(plugin/custom_sensor_system)
add_subdirectory(plugin/gui_system_plugin)
add_subdirectory(plugin/hello_world)
add_subdirectory(plugin/rendering_plugins)
add_subdirectory(plugin/reset_plugin)
add_subdirectory(plugin/system_plugin)

add_subdirectory(standalone/comms)
add_subdirectory(standalone/custom_server)
add_subdirectory(standalone/each_performance)
add_subdirectory(standalone/entity_creation)
add_subdirectory(standalone/external_ecm)
add_subdirectory(standalone/gtest_setup)
add_subdirectory(standalone/joy_to_twist)
add_subdirectory(standalone/joystick)
add_subdirectory(standalone/keyboard)
add_subdirectory(standalone/light_control)
add_subdirectory(standalone/multi_lrauv_race)
add_subdirectory(standalone/scene_requester)
